rework the whole config and ui to use owo-lib.